# Solar-System-Modeling-OpenGL-

./: README.md
code/: CMakeLists.txt  Camera.h  MeshPainter.cpp  MeshPainter.h  Sphere.cpp  Sphere.h  TriMesh.cpp  TriMesh.h  main.cpp  skyBox.h
code/shaders/: fragmentShader.glsl  skyBoxFS.glsl  sunFragmentShader.glsl  sunVertexShader.glsl
shaders/: fshader.glsl  skyBoxVS.glsl  vshader.glsl
